--- a/nitpick_styles/generic-deepsource.toml
+++ b/nitpick_styles/generic-deepsource.toml
@@ -25,7 +25,7 @@ test_patterns = [
 ]
 version = 1
 
-[".deepsource.toml"."[analyzers]"]
+[[".deepsource.toml".analyzers]]
 enabled = true
 name = "python"
 
@@ -36,6 +36,6 @@ runtime_version = "3.x.x"
 skip_doc_coverage = ["init", "magic", "module"]
 type_checker = "mypy"
 
-[".deepsource.toml"."[transformers]"]
+[[".deepsource.toml".transformers]]
 enabled = true
 name = "ruff"
