--- a/nitpick_styles/generic-pre-commit-hooks.toml
+++ b/nitpick_styles/generic-pre-commit-hooks.toml
@@ -15,6 +15,8 @@ default_stages = ["pre-commit"]
 # nitpick pre-commit hook
 [[".pre-commit-config.yaml".repos]]
 repo = "https://github.com/NextGenContributions/nitpick"
+# This mutable rev would be automatically updated once "pre-commit autoupdate --bleeding-edge" is run
+rev = "develop-ng"
 [[".pre-commit-config.yaml".repos.hooks]]
 id = "nitpick-check"
 [[".pre-commit-config.yaml".repos.hooks]]
