--- a/nitpick_styles/generic-flake8.toml
+++ b/nitpick_styles/generic-flake8.toml
@@ -65,6 +65,7 @@ exclude = """\
 # D401: Checks for docstring first lines that are not in an imperative mood.
 # X100: ???
 # W504: Line break occurred after a binary operator
+# E501: Line too long (Already covered by Ruff)
 ignore = """\
     D100,\
     D104,\
