--- a/nitpick_styles/generic-trunk.toml
+++ b/nitpick_styles/generic-trunk.toml
@@ -19,40 +19,69 @@ url = "https://docs.trunk.io/cli/configuration#config-format"
 # To learn more about the format of this file, see https://docs.trunk.io/reference/trunk-yaml
 version = "0.1"
 
-[".trunk/trunk.yaml".cli]
-version = "1.22.9"
-
 # Trunk provides extensibility via plugins. (https://docs.trunk.io/plugins)
 [[".trunk/trunk.yaml".plugins.sources]]
 id = "trunk"
-ref = "v1.6.7"
-uri = "https://github.com/trunk-io/plugins"
+ref = "main-ng"
+uri = "https://github.com/NextGenContributions/plugins"
 
 # Many linters and tools depend on runtimes - configure them here. (https://docs.trunk.io/runtimes)
 [".trunk/trunk.yaml".runtimes]
 enabled = [
     "python@>=3.10.8",
+    "go@>=1.21.0",
+    "node@>=18.20.5",
 ]
+[[".trunk/trunk.yaml".runtimes.definitions]]
+type = "python"
+system_version = "allowed"
+
 
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 [".trunk/trunk.yaml".lint]
 enabled = [
     "actionlint@1.7.7",
-    "bandit@1.8.2",
+    "bandit@1.8.3",
+    "checkov@3.2.382",
+    "codespell@2.4.1",
+    # Temporarily disabled until we have better solution for unknown words
+    # - "cspell@8.17.5",
+    "djlint@1.36.4",
+    "flake8",
     "git-diff-check",
-    "markdownlint@0.44.0",
-    "mypy@1.14.1",
+    "gitleaks@8.24.0",
+    "hadolint@2.12.1-beta",
+    "markdown-link-check@3.13.6",
+    "markdown-table-prettify@3.6.0",
+    "markdownlint-cli2@0.17.2",
+    "mypy",
     "osv-scanner@1.9.2",
-    "prettier@3.4.2",
-    "pylint@3.3.4",
-    "renovate@39.141.0",
-    "ruff@0.9.3",
+    "prettier@3.5.3",
+    "pylint",
+    "pyright",
+    "basedpyright",
+    "renovate@39.190.1",
+    "ruff",
     "shellcheck@0.10.0",
     "shfmt@3.6.0",
     "taplo@0.9.3",
-    "trufflehog@3.88.3",
-    "yamllint@1.35.1"
+    "trivy@0.60.0",
+    "trufflehog@3.88.15",
+    "vale@3.9.6",
+    "yamllint@1.35.1",
 ]
+[[".trunk/trunk.yaml".lint.definitions]]
+name = "mypy"
+[[".trunk/trunk.yaml".lint.definitions.commands]]
+name = "lint"
+# Override mypy default command by adding '--no-incremental' flag, which is
+# needed to handle "AssertionError: Internal error: method must be called
+# on parsed file only" during trunk check run
+# Refs:
+# - https://github.com/python/mypy/issues/14521
+# - https://mypy.readthedocs.io/en/stable/command_line.html#incremental
+run = "mypy --no-incremental --ignore-missing-imports --follow-imports=silent --show-error-codes --show-column-numbers ${target}"
+
 
 [[".trunk/trunk.yaml".lint.ignore]]
 linters = ["ALL"]
