--- a/nitpick_styles/generic-trunk.toml
+++ b/nitpick_styles/generic-trunk.toml
@@ -40,37 +40,40 @@ system_version = "allowed"
 
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 [".trunk/trunk.yaml".lint]
-enabled = [
-    "actionlint@1.7.7",
-    "bandit@1.8.3",
-    "checkov@3.2.382",
-    "codespell@2.4.1",
-    # Temporarily disabled until we have better solution for unknown words
-    # - "cspell@8.17.5",
-    "djlint@1.36.4",
-    "flake8",
-    "git-diff-check",
-    "gitleaks@8.24.0",
-    "hadolint@2.12.1-beta",
-    "markdown-link-check@3.13.6",
-    "markdown-table-prettify@3.6.0",
-    "markdownlint-cli2@0.17.2",
-    "mypy",
-    "osv-scanner@1.9.2",
-    "prettier@3.5.3",
-    "pylint",
-    "pyright",
-    "basedpyright",
-    "renovate@39.190.1",
-    "ruff",
-    "shellcheck@0.10.0",
-    "shfmt@3.6.0",
-    "taplo@0.9.3",
-    "trivy@0.60.0",
-    "trufflehog@3.88.15",
-    "vale@3.9.6",
-    "yamllint@1.35.1",
-]
+# Temporarily comment out until we solve the issue with https://github.com/NextGenContributions/.nitpick/issues/8
+# We'll use "trunk-initial-python-linters.toml" to enable linters for the first `nitpick fix` run only
+#enabled = [
+#    # Temporarily disabled until we have better solution for unknown words
+#    # "cspell@8.17.5",
+#
+#    "actionlint@1.7.7",
+#    "bandit@1.8.3",
+#    "checkov@3.2.382",
+#    "codespell@2.4.1",
+#    "djlint@1.36.4",
+#    "flake8",
+#    "git-diff-check",
+#    "gitleaks@8.24.0",
+#    "hadolint@2.12.1-beta",
+#    "markdown-link-check@3.13.6",
+#    "markdown-table-prettify@3.6.0",
+#    "markdownlint-cli2@0.17.2",
+#    "mypy",
+#    "osv-scanner@1.9.2",
+#    "prettier@3.5.3",
+#    "pylint",
+#    "pyright",
+#    "basedpyright",
+#    "renovate@39.190.1",
+#    "ruff",
+#    "shellcheck@0.10.0",
+#    "shfmt@3.6.0",
+#    "taplo@0.9.3",
+#    "trivy@0.60.0",
+#    "trufflehog@3.88.15",
+#    "vale@3.9.6",
+#    "yamllint@1.35.1",
+#]
 [[".trunk/trunk.yaml".lint.definitions]]
 name = "mypy"
 [[".trunk/trunk.yaml".lint.definitions.commands]]
